# Diario_Escolar_RPA

./: README.md  funcoes_selenium.py  main.py  pyproject.toml  teste_df.py
